# samba_sampler

./: AUTHORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  temp.py
etc/: glottolog.corrections.csv
scaffolding/: README.md  build_supplements.py  build_trees.py  process_catalogs.py  requirements.txt
src/samba_sampler/: __init__.py  __main__.py  common.py  newick.py  sampling.py
src/samba_sampler/etc/: global_tree.gled.newick
tests/: test_common.py  test_samba.py
