[metadata]
name = samba_sampler
version = 0.3.2
author = Tiago Tresoldi
author_email = tiago@tresoldi.org
license = GPL-3.0
description = A Python package providing sampling methods via matrix-based distance measures to mitigate autocorrelation
keywords =
    sampling algorithm
    language sampling
    weighted sampling
    phylogenetic autocorrelation
    areal autocorrelation
    linguistics
    typology
url = https://github.com/tresoldi/samba_sampler
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic
project_urls =
    Documentation = https://samba_sampler.readthedocs.io

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
include_package_data = True
python_requires = >=3.8
test_suite = tests
tests_require =

[options.packages.find]
where = src

[options.entry_points]
console_scripts = samba_sampler=samba_sampler.__main__:main

[options.extras_require]
dev = black; flake8; twine; wheel
test = pytest